# correspondence_grouping

./: CMakeLists.txt  add_curvature.cpp  add_normals.cpp  base.pcd  bb_hull.cpp  bbox.cpp  cloud_target_xyz_18.pcd  cluster_cloud_hull_1_4_no-downsampling_rgba.pcd  correspondence_grouping.cpp  input_with_normals.pcd  mesh_sampling.cpp  transfer_attributes.cpp  visualize_2_clouds_with_normals.cpp
